2016-11-16  horneds

	* Basic Marshmallow support
	* Faker 0.7.3
	* Add Django 1.10 support
	* Drop Django 1.7 support

2016-03-18  horneds

	* fake-factory 5.0.7
	* fix deprication warnings (django)
	* Add Django 1.9 support
	* Drop Django 1.6 support

2015-04-14  horneds

	* Version 5.1.0
	* Drop support for Django 1.5.*
	* Add support for Django 1.8
	* Add support for mongoengine 0.9.0

2015-01-23  horneds

	* Version 5.0.0
	* fake-factory (Faker) integrated to Mixer
	* Support locales
	* WARNING: API has been changed (mixer.G, mixer.F has been removed,
	use mixer.faker insted)

2014-11-18  horneds

	* Support timezones in Django
	* Fix installation in python 2.6

2014-09-29  horneds

	* Fix SQLAlchemy <= 0.8 compatibility
	* Version 4.9.3

2014-09-15  horneds

	* Drop support Django 1.4
	* Add support Django 1.7

2014-08-18  horneds

	* Version 4.8.1
	* Fix sqlalchemy using default GenFactory (c) cheungpat

2014-08-04  horneds

	* Version 4.8.0
	* Added gen_timedelta and gen_datetime_range to generators

2014-08-31  horneds

	* Version 4.7.5
	* Support EmailField in YADM

2014-07-10  horneds

	* Version 4.7.4
	* Fix phone numbers generation

2014-07-09  horneds

	* Version 4.7.2
	* Base support for custom fields

2014-06-19  horneds

	* The package's exceptions is more informative.

2014-06-17  horneds

	* Version 4.6.0
	* Provided guard and select for sqlalchemy. Added mixer.reload.
	* Better Django support. Now Mixer tracks field value's type and
	update it if needed

2014-06-13  horneds

	* Version 4.5.3
	* Add support for django fields: FilePathField, GenericIPAddressField, PositiveSmallIntegerField

2014-06-07  horneds

	* Version 4.5.2
	* Fix sqlalchemy many to many relationships (c) Antoine Bertin

2014-05-23  horneds

	* Version 4.5.1
	* More information from errors

2014-05-19  horneds

	* Version 4.4.0
	* Added mixer.G.get_percent and mixer.G.get_percent_decimal

2014-05-16  horneds

	* Version 4.3.2
	* Add support for Django o2o field.
