@@ -1,13 +1,64 @@
 language: python
 
-python: 2.7
+python:
+  - 2.7
+  - 3.5
+  - 3.6
 
 env:
-    - TOXENV=py27-d9
-    - TOXENV=py35-d9
-    - TOXENV=py27-d10
-    - TOXENV=py35-d10
-    - TOXENV=cov
+  - TOXENV=cov
+
+matrix:
+  include:
+    - python: 2.7
+      env: TOXENV=py27-d9
+    - python: 2.7
+      env: TOXENV=py27-d10
+
+    - python: 3.5
+      env: TOXENV=py35-d9
+    - python: 3.5
+      env: TOXENV=py35-d10
+    - python: 3.5
+      env: TOXENV=py35-d11
+
+    - python: 3.6
+      env: TOXENV=py36-d11
+    - python: 3.6
+      env: TOXENV=py36-d20
+
+  exlcude:
+    - python: 2.7
+      env: TOXENV=py35-d9
+    - python: 2.7
+      env: TOXENV=py35-d10
+    - python: 2.7
+      env: TOXENV=py35-d11
+    - python: 2.7
+      env: TOXENV=py36-d11
+    - python: 2.7
+      env: TOXENV=py36-d20
+
+    - python: 3.5
+      env: TOXENV=py27-d9
+    - python: 3.5
+      env: TOXENV=py27-d10
+    - python: 3.5
+      env: TOXENV=py36-d11
+    - python: 3.5
+      env: TOXENV=py36-d20
+
+    - python: 3.6
+      env: TOXENV=py27-d9
+    - python: 3.6
+      env: TOXENV=py27-d10
+    - python: 3.6
+      env: TOXENV=py35-d9
+    - python: 3.6
+      env: TOXENV=py35-d10
+    - python: 3.6
+      env: TOXENV=py35-d11
+
 
 branches:
     only:
@@ -16,7 +67,9 @@ branches:
 
 install: pip install --quiet tox
 
-script: tox
+
+script: tox -e ${TOXENV}
+
 
 after_script:
     - if [ $TOXENV == "cov" ]; then
