@@ -1,5 +1,9 @@
 [tox]
-envlist=py27-d9,py35-d9,py27-d10,py35-d10,cov
+envlist = py27-d{9,10},
+          py35-d{9,10,11},
+          py36-d{11,20},
+          cov
+skip_missing_interpreters = false
 
 [pytest]
 addopts = -xs
@@ -27,28 +31,53 @@ deps =
 [testenv:py27-d9]
 basepython = python2.7
 deps =
-    django==1.9.11
+    django==1.9.13
     pony
     {[testenv]deps}
 
 [testenv:py35-d9]
 basepython = python3.5
 deps =
-    django==1.9.11
+    django==1.9.13
     {[testenv]deps}
 
 # Django 1.10
 [testenv:py27-d10]
 basepython = python2.7
 deps =
-    django==1.10.3
+    django==1.10.8
     pony
     {[testenv]deps}
 
 [testenv:py35-d10]
 basepython = python3.5
 deps =
-    django==1.10.3
+    django==1.10.8
+    {[testenv]deps}
+
+[testenv:py36-d10]
+basepython = python3.6
+deps =
+    django==1.10.8
+    {[testenv]deps}
+
+# Django 1.11
+[testenv:py35-d11]
+basepython = python3.5
+deps =
+    django==1.11.7
+    {[testenv]deps}
+
+[testenv:py36-d11]
+basepython = python3.6
+deps =
+    django==1.11.7
+    {[testenv]deps}
+
+[testenv:py36-d20]
+basepython = python3.6
+deps =
+    django==2.0b1
     {[testenv]deps}
 
 [testenv:cov]
