@@ -1,3 +1,9 @@
+2017-11-06  marazmiki
+
+	* Added Django 2.0 support for Python 3.6;
+	* Added Django 1.10 support for Python 3.6;
+	* Added Django 1.11 support for Python 3.5+.
+
 2016-11-16  horneds
 
 	* Basic Marshmallow support
